Fixed styling and header text overflow for insights overview

--- a/src/app/insight/article-card/article-card.component.scss
+++ b/src/app/insight/article-card/article-card.component.scss
@@ -1,8 +1,3 @@
-.article-card {
-  margin: 10px 4px;
-  border-radius: 10px;
-}
-
 ::ng-deep .mat-card-header-text {
   margin: 0 !important;
 }
@@ -14,6 +9,8 @@
 }
 
 .mat-card {
+  margin: 10px 4px;
+  border-radius: 10px;
   -webkit-box-shadow: none;
   -moz-box-shadow: none;
   box-shadow: none;
