--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -1,11 +1,8 @@
 @import '../../../theme/flamingo';
 
-.pn-header-toolbar {
-  justify-content: center;
+.pn-header {
+  margin: 20px 20px 10px 0px;
+  text-align: center;
   font-weight: bolder;
-  -webkit-box-shadow: 0px 0px 80px -50px rgba(0,0,0,1);
-  -moz-box-shadow: 0px 0px 80px -50px rgba(0,0,0,1);
-  box-shadow: 0px 0px 80px -50px rgba(0,0,0,1);
-  background-color: rgb(0,0,0,0);
   color: map-get($flamingo, 500);
 }
